--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
 	<!--start_featured_spce-->
 		<div class="featured_area">
 			<div class="container">
-				<div class="featured_contant">
-					<h1>Some good place to where can build your startup business</h1>
-					<p>Coworking offers beautifully crafted workspaces where people can create, connect, and grow their businesses at prime locations in multiple cities.</p>
-				</div>
-				<div class="featured_image">
-					<img src="assets/images/feature.png" alt="image">
+				<div class="featured_contant_area">
+					<div class="featured_contant">
+						<h1>Some good place to where can build your startup business</h1>
+						<p>Coworking offers beautifully crafted workspaces where people can create, connect, and grow their businesses at prime locations in multiple cities.</p>
+					</div>
+					<div class="featured_image">
+						<img src="assets/images/feature.png" alt="image">
+					</div>
 				</div>
 			</div>
 		</div>
