--- a/index.html
+++ b/index.html
@@ -88,6 +88,29 @@
 			</div>
 		</div>
 	<!--end_featured_spce-->
+	<!--start_working_spce-->
+	<div class="working_space">
+		<div class="container">
+			<div class="working_space_heading">
+				<h1>Working space</h1>
+				<h4>Let’s meet our interior room decoration</h4>
+			</div>
+			<div class="working_space_area">
+				<div class="ws_gallary">
+					<img src="assets/images/ws_gallary/image18.png" alt="image">
+					<img src="assets/images/ws_gallary/image17.png" alt="image">
+					<img src="assets/images/ws_gallary/image20.png" alt="image">
+					<img src="assets/images/ws_gallary/image16.png" alt="image">
+					<img src="assets/images/ws_gallary/image19.png" alt="image">
+					<img src="assets/images/ws_gallary/image21.png" alt="image">
+				</div>
+			</div>
+			<div class="ws_button">
+				<a target="_blank" href="index.html">Explore More > </a>
+			</div>
+		</div>
+	</div>
+	<!--end_working_spce-->
 </body>
 </html>
                                      
