--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 					<img src="assets/images/ws_gallary/image18.png" alt="image">
 					<img src="assets/images/ws_gallary/image17.png" alt="image">
 					<img src="assets/images/ws_gallary/image20.png" alt="image">
+				</div>
+				<div class="ws_gallary">
 					<img src="assets/images/ws_gallary/image16.png" alt="image">
 					<img src="assets/images/ws_gallary/image19.png" alt="image">
 					<img src="assets/images/ws_gallary/image21.png" alt="image">
