--- a/index.html
+++ b/index.html
@@ -113,6 +113,25 @@
 		</div>
 	</div>
 	<!--end_working_spce-->
+	<!--start_customer_sectionn-->
+		<div class="customer">
+			<div class="container">
+				<div class="customer_all">
+					<div class="customer_left">
+						<img src="assets/images/customer/image10.png" alt="image">
+					</div>
+					<div class="customer_right">
+						<h1>We have more than thousand of worldwide happy customer.</h1>
+						<p>Coworking offers beautifully crafted workspaces where people can create, connect, and grow their businesses at prime locations in multiple cities.</p>
+						<div class="customer_button">
+							<a target="_blank" href="index.html">Learn more > </a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	<!--end_customer_sectionn-->
+	
 </body>
 </html>
                                      
