update full code

--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
 				</div>
 				<!--End_header_contant-->
 				<!--start_BG_section-->
-
+				<div class="bg_section">
+					<h1>Coworking space that
+					will feel like home.</h1>
+					<p>Whether you’re an established enterprise or a growing startup, discover spaces that inspire which will best your most impactful work.</p>
+				</div>
+				<!--start_BG_section-->
 			</div>
-			<div class="bg_section">
-				<h1>Coworking space that
-				will feel like home.</h1>
-				<p>Whether you’re an established enterprise or a growing startup, discover spaces that inspire which will best your most impactful work.</p>
-			</div>
-			<!--start_BG_section-->
 	</header>
-	<!--start_header_end-->
+	<!--end_header-->
 	<!--start_clint_contant-->
 	<div class="customer_area">
 		<div class="container">
@@ -133,6 +132,218 @@
 			</div>
 		</div>
 	<!--end_customer_sectionn-->
+	<!--start_product_features-->
+	<div class="product_features">
+		<div class="container">
+			<div class="pf_area">
+				<div class="pf_heading">
+					<h1>What the features of product</h1>
+					<p>Features are highlighted here</p>
+				</div>
+				<!--start_pf_contant_full-->
+				<div class="pf_contant_full">
+					<!--start_pf_contant-->
+					<div class="pf_contant">
+						<div class="pf_contant_row">
+							<div class="pf_contant_column">
+								<div class="pf_icon_area">
+									<img src="assets/images/pf_gallary/icon1.png" alt="icon">
+								</div>
+								<div class="pf_contant_area">
+									<h1>3D modeling & art</h1>
+									<p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
+									<div class="product_button">
+										<a target="_blank" href="index.html">Learn more > </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--end_pf_contant-->
+
+					<!--start_pf_contant-->	
+					<div class="pf_contant">
+						<div class="pf_contant_row">
+							<div class="pf_contant_column">
+								<div class="pf_icon_area">
+									<img src="assets/images/pf_gallary/icon3.png" alt="icon">
+								</div>
+								<div class="pf_contant_area">
+									<h1>Digital promotion</h1>
+									<p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
+									<div class="product_button">
+										<a target="_blank" href="index.html">Learn more > </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--end_pf_contant-->
+										<!--start_pf_contant-->	
+					<div class="pf_contant">
+						<div class="pf_contant_row">
+							<div class="pf_contant_column">
+								<div class="pf_icon_area">
+									<img src="assets/images/pf_gallary/icon5.png" alt="icon">
+								</div>
+								<div class="pf_contant_area">
+									<h1>Business Enterprise</h1>
+									<p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
+									<div class="product_button">
+										<a target="_blank" href="index.html">Learn more > </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--end_pf_contant-->
+				</div>
+				<!--end_pf_contant_full-->
+				<!--start_pf_contant_full-->
+				<div class="pf_contant_full">
+					<!--start_pf_contant-->	
+					<div class="pf_contant">
+						<div class="pf_contant_row">
+							<div class="pf_contant_column">
+								<div class="pf_icon_area">
+									<img src="assets/images/pf_gallary/icon2.png" alt="icon">
+								</div>
+								<div class="pf_contant_area">
+									<h1>Marketing & advertising </h1>
+									<p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
+									<div class="product_button">
+										<a target="_blank" href="index.html">Learn more > </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--end_pf_contant-->
+
+					<!--start_pf_contant-->	
+					<div class="pf_contant">
+						<div class="pf_contant_row">
+							<div class="pf_contant_column">
+								<div class="pf_icon_area">
+									<img src="assets/images/pf_gallary/icon4.png" alt="icon">
+								</div>
+								<div class="pf_contant_area">
+									<h1>Ultimate development</h1>
+									<p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
+									<div class="product_button">
+										<a target="_blank" href="index.html">Learn more > </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--start_pf_contant-->	
+					<div class="pf_contant">
+						<div class="pf_contant_row">
+							<div class="pf_contant_column">
+								<div class="pf_icon_area">
+									<img src="assets/images/pf_gallary/icon6.png" alt="icon">
+								</div>
+								<div class="pf_contant_area">
+									<h1>Online support</h1>
+									<p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
+									<div class="product_button">
+										<a target="_blank" href="index.html">Learn more > </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--end_pf_contant-->
+				</div>
+				<!--end_pf_contant_full-->
+			</div>
+		</div>
+	</div>
+	<!--end_product_features-->
+
+	<!--start_Blog_Post-->
+		<div class="blog_post">
+			<div class="container">
+				<div class="blog_heading">
+					<h1>Blog Post</h1>
+					<h4>Popular blog post we update everyday</h4>
+				</div>
+				<!--start_blog_post_full-->
+				<div class="blog_post_full">
+					<div class="blog_post_area">
+						<div class="blog_image">
+							<img src="assets\images\blog_post/image1.png" alt="image">
+						</div>
+						<div class="blog_contant">
+							<h2>How to work with prototype design with adobe xd featuring tools</h2>
+							<p><img src="assets/images/blog_post/comments.png" alt="image">22 Comments</p>
+						</div>
+					</div>
+
+					<div class="blog_post_area">
+						<div class="blog_image">
+							<img src="assets\images\blog_post/image1.png" alt="image">
+						</div>
+						<div class="blog_contant">
+							<h2>Create multiple artboard by using figma prototyping development</h2>
+							<p><img src="assets/images/blog_post/comments.png" alt="image">15 Comments</p>
+						</div>
+					</div>
+					<div class="blog_post_area">
+						<div class="blog_image">
+							<img src="assets\images\blog_post/image1.png" alt="image">
+						</div>
+						<div class="blog_contant">
+							<h2>Convert your web layout theming easily with sketch zeplin extension</h2>
+							<p><img src="assets/images/blog_post/comments.png" alt="image">18 Comments</p>
+						</div>
+					</div>
+				</div>
+				<!--end_blog_post_full-->
+			</div>
+		</div>
+	<!--end_Blog_Post-->
+	<!--Start_Footer_Section-->
+		<footer class="footer_section">
+			<div class="container">
+				<div class="footer_heading">
+					<h1>Subscribe to get best offers.</h1>
+					<p>By subscribing with your mail, you will agree with terms</p>
+				</div>
+				<div class="button_area">
+					<div class="Subscribe_area">
+						<div class="subscribe_mail_button">
+							<input type="email" placeholder="Enter your email">
+						</div>
+						<div class="Subscribe_button">	
+							<input type="submit" value="Subscribe us">
+						</div>
+					</div>
+				</div>
+				<!-- footer_menu-->
+				<div class="footer_menu_nav">
+					<div class="footer_logo">
+						<a href="index.html"><img src="assets\images\footer_logo/footer.png" alt="logo"></a>
+						<p>Copyright by 2021 Dev, Inc</p>
+					</div>
+				
+					<div class="footer_menu">
+						<ul>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Adversite </a></li>
+							<li><a href="#">Supports</a></li>
+							<li><a href="#">Marketing</a></li>
+							<li><a href="#">FAQ</a></li>
+						</ul>
+					</div>
+				</div>
+				<!--End_footer_menu-->
+			</div>
+		</footer>
+	<!--Start_Footer_Section-->
+
 </body>
-</html>
+</html>            
                                      
+<!--<a target="_blank" href="index.html">Subscribe us</a>
